<resources>
    <string name="app_name">minibus</string>

    <!-- Buttons -->
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="logout">Logout</string>
    <string name="close">Close</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="sort_by">Sort by</string>
    <string name="ok">OK</string>
    <string name="retry">Retry</string>
    <string name="back">Back</string>
    <string name="book">Book</string>
    <string name="confirm_reservation">Confirm reservation</string>
    <string name="go">Go</string>
    <string name="cancel">Cancel</string>
    <string name="en_route">En Route</string>
    <string name="completed">Completed</string>
    <string name="active">Active</string>
    <string name="history">History</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Empty state -->
    <string name="empty_user_bookings_title">No bookings found</string>
    <string name="empty_user_bookings_message">Hurry up to book a seat</string>
    <string name="empty_user_bookings_button">Explore route schedule</string>

    <string name="empty_cities_title">No cities found</string>
    <string name="empty_cities_message">It might be an error. Try to update later</string>
    <string name="empty_cities_button">Back to route schedule</string>

    <string name="empty_route_schedule_title">No schedule found</string>
    <string name="empty_route_schedule_message">Try to change a route or a date</string>
    <string name="empty_route_schedule_button">Departure cities</string>

    <!-- Labels -->
    <string name="label_departure_date">Departure date:</string>
    <string name="label_travel_time">Travel time:</string>
    <string name="label_arrival_time">Arrival time:</string>
    <string name="label_trip_route">Route:</string>
    <string name="label_passenger">Passenger:</string>
    <string name="label_departure_station">Departure station:</string>
    <string name="label_arrival_station">Arrival station:</string>
    <string name="label_seats_to_reserve">Seats to reserve:</string>
    <string name="label_vehicle">Vehicle:</string>
    <string name="label_plate_number">Plate number:</string>
    <string name="label_payment_on_boarding">*payment on boarding</string>
    <string name="label_cost_note">per seat</string>
    <string name="label_available_seats_count">%1$d seats</string>
    <string name="label_sort_by_option">Sort by %1$s</string>
    <string name="label_enter_name">Name</string>
    <string name="label_enter_phone">Phone number</string>
    <string name="label_enter_pass">Password</string>
    <string name="label_confirm_pass">Confirm password</string>
    <string name="label_departure">From</string>
    <string name="label_arrival">To</string>

    <!-- Auth form -->
    <string name="user_name_empty_error">Enter your name</string>
    <string name="user_phone_format_error">Wrong phone number format</string>
    <string name="user_pass_empty_error">Please enter the password</string>
    <string name="user_confirm_pass_error">Passwords does not match</string>
    <string name="user_confirm_pass_empty_error">Please confirm the password</string>
    <string name="login_account_exists">I already have an account</string>
    <string name="login_no_account">I don\'t have an account yet</string>

    <!-- Titles -->
    <string name="login_title">Login</string>
    <string name="profile_title">Profile</string>
    <string name="filter_title">Filter</string>
    <string name="departure_cities_title">Departure</string>
    <string name="arrival_cities_title">Arrival</string>
    <string name="route_schedule_title">Schedule</string>
    <string name="route_direction_title">Route direction</string>
    <string name="route_trip_summary_title">Reservation</string>

    <!--Menu-->
    <string name="menu_profile">Profile</string>
    <string name="menu_login">Login</string>
    <string name="menu_theme">Toggle theme</string>
    <string name="menu_about">About</string>
    <string name="menu_logout">Logout</string>

    <!-- Success -->
    <string name="success_booking_title">Reserved!</string>
    <string name="success_booking_message">To view active bookings, go to your profile</string>
    <string name="success_login_title">Welcome!</string>
    <string name="success_login_message">Continue searching for a suitable route or open your profile?</string>

    <!-- Progress -->
    <string name="progress_default_title">Loading</string>
    <string name="progress_success_title">Completed</string>
    <string name="progress_default_message">Please wait</string>

    <!-- Errors -->
    <string name="error_default_title">Error</string>
    <string name="error_default_message">An error occurred while loading data</string>
    <string name="error_trip_not_available">This ride is no longer available</string>
    <string name="error_departure_first">Please select your departure point firstly</string>
    <string name="error_complete_route">Please complete your route details</string>
    <string name="error_finding_direction">An error occurred while finding exact route</string>

    <!-- Warnings -->
    <string name="warning_default_title">Attention</string>
    <string name="warning_bookings_limit_message">Active booking limit exceeded</string>
    <string name="warning_no_seats_message">No seats available for booking</string>
    <string name="warning_logout_message">Do you really want to log out?</string>
    <string name="warning_booking_cancel_message">Do you really want to cancel your reservation?</string>
    <string name="warning_unauthorized_message">To continue, you must be logged in</string>
    <string name="warning_bad_connectivity_message">Loss of Internet connection</string>

    <!-- Welcome and goodbye -->
    <string name="welcome_user_message">Welcome, %1$s</string>
    <string name="goodbye_user_message">Come back again, %1$s</string>
</resources>
