<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_login"
        android:title="@string/menu_login"
        android:orderInCategory="100"
        android:actionLayout="@layout/view_toolbar"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_item_profile"
        android:title="@string/menu_profile"
        android:visible="false"
        android:orderInCategory="200"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_item_about"
        android:title="@string/menu_about"
        android:orderInCategory="300"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_item_logout"
        android:title="@string/menu_logout"
        android:orderInCategory="400"
        android:visible="false"
        app:showAsAction="never"/>
</menu>