<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_empty"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorSurface"
    android:gravity="center_horizontal|center_vertical">

    <ImageView
        android:id="@+id/iv_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:padding="8dp"
        android:src="@drawable/ic_empty_user_bookings" />

    <TextView
        android:id="@+id/tv_empty_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_empty"
        android:layout_centerHorizontal="true"
        android:layout_margin="4dp"
        android:textAppearance="?textAppearanceHeadline6"
        android:text="@string/empty_user_bookings_title" />

    <TextView
        android:id="@+id/tv_empty_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_empty_title"
        android:layout_margin="4dp"
        android:layout_centerHorizontal="true"
        android:textAppearance="?textAppearanceBody2"
        android:text="@string/empty_user_bookings_message" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_empty_action"
        style="@style/Widget.AppTheme.Button.UnelevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_empty_subtitle"
        android:layout_margin="8dp"
        android:layout_centerHorizontal="true"
        android:text="@string/empty_user_bookings_button" />
</RelativeLayout>