<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_trip_info"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@drawable/bg_section">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:textAppearance="?textAppearanceBody1"
            android:text="@string/label_travel_time"/>

        <TextView
            android:id="@+id/tv_trip_travel_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:textAppearance="?textAppearanceBody1"
            android:ellipsize="end"
            android:textAlignment="textEnd"
            android:textStyle="bold"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:textAppearance="?textAppearanceBody1"
            android:text="@string/label_trip_route"/>

        <TextView
            android:id="@+id/tv_trip_route"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:textAppearance="?textAppearanceBody1"
            android:ellipsize="end"
            android:textAlignment="textEnd"
            android:textStyle="bold"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:weightSum="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:textAppearance="?textAppearanceBody1"
            android:text="@string/label_departure_station"/>

        <TextView
            android:id="@+id/tv_trip_dep_station"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:textAppearance="?textAppearanceBody1"
            android:ellipsize="end"
            android:textAlignment="textEnd"
            android:textStyle="bold"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:weightSum="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:textAppearance="?textAppearanceBody1"
            android:text="@string/label_arrival_station"/>

        <TextView
            android:id="@+id/tv_trip_arr_station"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:textAppearance="?textAppearanceBody1"
            android:ellipsize="end"
            android:textAlignment="textEnd"
            android:textStyle="bold"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:weightSum="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:textAppearance="?textAppearanceBody1"
            android:text="@string/label_vehicle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_trip_vehicle_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textAppearance="?textAppearanceBody1"
                android:ellipsize="end"
                android:layout_marginEnd="8dp"
                android:textAlignment="textEnd"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_trip_vehicle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textAppearance="?textAppearanceBody1"
                android:ellipsize="end"
                android:textAlignment="textEnd"
                android:textStyle="bold"/>
        </LinearLayout>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:weightSum="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:textAppearance="?textAppearanceBody1"
            android:text="@string/label_plate_number"/>

        <TextView
            android:id="@+id/tv_trip_vehicle_plate_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:textAppearance="?textAppearanceBody1"
            android:ellipsize="end"
            android:textAlignment="textEnd"
            android:textStyle="bold"/>
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorBackground"
        android:layout_marginBottom="16dp"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:textAppearance="?textAppearanceBody1"
            android:text="@string/label_passenger"/>

        <TextView
            android:id="@+id/tv_trip_passenger_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:textAppearance="?textAppearanceBody1"
            android:ellipsize="end"
            android:textAlignment="textEnd"
            android:textStyle="bold"/>
    </TableRow>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?textAppearanceBody1"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/label_seats_to_reserve"/>

        <RadioGroup
            android:id="@+id/rg_seats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal"/>
    </RelativeLayout>
</LinearLayout>