<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="7dp">

    <RelativeLayout
        android:id="@+id/rl_summary_header"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/tv_summary_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:ellipsize="end"
            android:singleLine="true"
            android:textAppearance="?textAppearanceHeadline6" />

        <TextView
            android:id="@+id/tv_summary_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:ellipsize="end"
            android:singleLine="true"
            android:textAppearance="?textAppearanceBody1" />

        <TextView
            android:id="@+id/tv_summary_cost_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/tv_summary_cost"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/label_cost_note"
            android:textAppearance="?textAppearanceBody2" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/ll_trip_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_summary_header">

        <include
            layout="@layout/view_route_trip_summary" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_trip_info"
        android:background="@color/colorSurface"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <TextView
            android:id="@+id/tv_reservation_note"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/label_payment_on_boarding"
            android:textAppearance="?textAppearanceBody2" />

        <org.minibus.app.ui.custom.ProgressMaterialButton
            android:id="@+id/btn_confirm_reservation"
            style="@style/Widget.AppTheme.Button.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:textAllCaps="true"
            android:text="@string/confirm_reservation"/>
    </LinearLayout>
</RelativeLayout>